--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ description = "A web framework designed for simplicity and efficiency"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
-    'License :: OSI Approved :: BSD 3-Clause "New" or "Revised" License',
+    'Programming Language :: Python :: 3',
 ]
 
 [project.urls]
