Configuring for PyPi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,26 @@
 [build-system]
-requires = ["setuptools>=61.0", "typer>=0.7.0", "rich"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "crest"
+name = "crestwebframework"
 version = "1.0.0"
-authors = [
-  { name="William Herring", email="william.herring.au@gmail.com" },
-]
+authors = [{ name="William Herring", email="william.herring.au@gmail.com" }]
 description = "A web framework designed for simplicity and efficiency"
 readme = "README.md"
+license = { file = "LICENSE" }
 requires-python = ">=3.7"
 classifiers = [
-    'Programming Language :: Python :: 3',
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
 ]
+keywords = ["web", "framework", "crest"]
+dependencies = ["typer>=0.7.0", "rich>=12.6.0"]
+
+[project.optional-dependencies]
+dev = ["pytest"]
 
 [project.urls]
-"Homepage" = "https://github.com/william-herring/crest"
+"Homepage" = "https://william-herring.github.io/crest"
+"Repository" = "https://github.com/william-herring/crest"
